--- a/app/src/main/res/layout/item_passphrases.xml
+++ b/app/src/main/res/layout/item_passphrases.xml
@@ -5,4 +5,6 @@
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
   android:padding="@dimen/half_dynamic_spacing"
+  android:clickable="true"
+  android:foreground="?android:selectableItemBackground"
   tools:text="NetFlix"/>
